# PETER_RASPBERRY

./: .gitignore  run_tum.sh
Peter_copy_rasberry_3/: adc_test.py  test_imu.py
Peter_copy_rasberry_3/DDS/Camera_test/: CMakeLists.txt  CameraData.idl
Peter_copy_rasberry_3/DDS/Camera_test/src/: publisher.cpp  subscriber.cpp
Peter_copy_rasberry_3/PI3/: run.sh  run_normal.sh
Peter_copy_rasberry_3/PI3/Audio/: CMakeLists.txt
Peter_copy_rasberry_3/PI3/camera/: main.cpp
Peter_copy_rasberry_3/PI3/camera/documentacion/: open_cv2.cpp
Peter_copy_rasberry_3/PI3/lidar_cpp_udp/: CMakeLists.txt  main.cpp
Peter_copy_rasberry_3/PI3/serial_comuni/: main.cpp
Peter_copy_rasberry_3/PI3/serial_udp_movement/: CMakeLists.txt  main.cpp
Peter_copy_rasberry_3/Test/camera/: main.cpp
Peter_copy_rasberry_3/Test/camera/documentacion/: camera_udp_funcional.cpp  funcional_tcp_last.cpp
Peter_copy_rasberry_3/Test/camera/test/: camera_1.cpp
Peter_copy_rasberry_3/audio_cpp/: CMakeLists.txt  main.cpp
Peter_copy_rasberry_3/camera_lidar_udp/camera_cpp/: CMakeLists.txt  main.cpp
Peter_copy_rasberry_3/camera_lidar_udp/lidar_cpp_udp/: main.cpp
Peter_copy_rasberry_3/client_lidar_camera/: CMakeLists.txt  main.cpp
Peter_copy_rasberry_3/client_lidar_camera/include/camera/: udp_video_streamer.cpp  udp_video_streamer.hpp
Peter_copy_rasberry_3/client_lidar_camera/include/lidar/: lidar_udp.cpp  lidar_udp.hpp
Peter_copy_rasberry_3/sebas/PI3/: run_normal.sh
Peter_copy_rasberry_3/sebas/PI3/Audio/: audio_text.py  main.cpp
Peter_copy_rasberry_3/sebas/PI3/Audio/documentacion/: v1_funcional.cpp  v2_funcio.cpp
Peter_copy_rasberry_3/sebas/PI3/camera/: main.cpp
Peter_copy_rasberry_3/sebas/PI3/camera/documentacion/: funcional_estable_cv2.cpp
Peter_copy_rasberry_3/sebas/PI3/lidar_cpp_udp/: main.cpp
Peter_copy_rasberry_3/sebas/PI3/serial_comuni/: CMakeLists.txt
Peter_copy_rasberry_3/sebas/PI3/serial_udp_movement/: main.cpp
Peter_copy_rasberry_3/sebas/PI3/serial_udp_movement/documentacion/: funcional_slow.cpp
ldlidar_stl_sdk-master/ldlidar_driver/include/serialcom/: serial_interface_linux.h
paper_def/camera/: CMakeLists.txt  tum_camera_view.cpp
pruebas/: CMakeLists.txt  imu_ina.cpp  motores.py
